@@ -1,4 +1,4 @@
 .log
 
 This is the subdirectory that svscan will look in to find the service
-into which it will redirect all output.  It *must* start with a period.
+into which it will redirect all output.
