@@ -38,11 +38,9 @@ needs two free descriptors for each pipe.
 
 If a subdirectory named
 .B .log
-exists and has a
-.B log
-subdirectory,
+exists,
 .B svscan
-starts the log service found there and redirects its output to that service.
+starts the service found there and redirects its output through it.
 This service is started before any other.
 
 Every five seconds,
